# AoC2024

./: .gitignore  CMakeLists.txt  readme.md  scaffold.py
src/day3/: main.cpp  solution.cpp  solution.hpp
src/utils/: utils.ixx
